src/parser/y.output
Terminals unused in grammar

   TOKEN_Atba3


Grammar

    0 $accept: line $end

    1 line: assignment STATEMENT_TERMINATOR_TOKEN
    2     | exit_command STATEMENT_TERMINATOR_TOKEN
    3     | declaration STATEMENT_TERMINATOR_TOKEN
    4     | line declaration STATEMENT_TERMINATOR_TOKEN
    5     | line assignment STATEMENT_TERMINATOR_TOKEN
    6     | line for_statement
    7     | for_statement
    8     | line if_statement
    9     | if_statement
   10     | line switch_statement
   11     | switch_statement
   12     | line while_statement
   13     | while_statement
   14     | line repeat_statement
   15     | repeat_statement
   16     | line exit_command STATEMENT_TERMINATOR_TOKEN
   17     | STATEMENT_TERMINATOR_TOKEN
   18     | line expbitwise STATEMENT_TERMINATOR_TOKEN
   19     | line double_value_expAddSubtract STATEMENT_TERMINATOR_TOKEN
   20     | double_value_expAddSubtract STATEMENT_TERMINATOR_TOKEN

   21 declaration: data_type IDENTIFIER_TOKEN
   22            | data_type assignment
   23            | CONSTANT_TOKEN data_type assignment

   24 data_type: Rakam
   25          | TOKEN_3ashry
   26          | TOKEN_Boolean
   27          | TOKEN_Harf
   28          | TOKEN_Hroof

   29 assignment: IDENTIFIER_TOKEN '=' expbitwise
   30           | IDENTIFIER_TOKEN '=' double_value_expAddSubtract
   31           | IDENTIFIER_TOKEN '=' Bexp1
   32           | IDENTIFIER_TOKEN '=' string_value_assignment

   33 string_value_assignment: STRING_VALUE

   34 if_statement: IF_STATEMENT_TOKEN '(' Bexp ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN
   35             | if_statement ELSE_STATEMENT_TOKEN SCOPE_START_TOKEN line SCOPE_END_TOKEN

   36 switch_statement: SWITCH_CASE_BEGINNING_TOKEN '(' IDENTIFIER_TOKEN ')' SWITCH_CASE_START_CASES_TOKEN ':' case_statement SWITCH_DEFAULT_CASE_BEGINNING_TOKEN line SWITCH_CASE_END_CASES_TOKEN

   37 case_statement: case_statement '(' term ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN
   38               | '(' term ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

   39 for_iterator: assignment
   40             | declaration

   41 for_statement: FOR_LOOP_STATMENT_TOKEN '(' for_iterator STATEMENT_TERMINATOR_TOKEN Bexp1 STATEMENT_TERMINATOR_TOKEN assignment ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

   42 while_statement: WHILE_LOOP_STATEMENT_TOKEN '(' Bexp1 ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

   43 repeat_statement: DO_STATEMENT_TOKEN line WHILE_LOOP_STATEMENT_TOKEN '(' Bexp1 ')' STATEMENT_TERMINATOR_TOKEN

   44 expbitwise: expbitwise '|' exp
   45           | expbitwise '&' exp
   46           | expbitwise '^' exp
   47           | exp

   48 exp: expAddSubtract
   49    | exp SHIFT_LEFT expAddSubtract
   50    | exp SHIFT_RIGHT expAddSubtract

   51 expAddSubtract: component
   52               | expAddSubtract '+' component
   53               | expAddSubtract '-' component

   54 double_value_expAddSubtract: double_value_expAddSubtract '+' double_value_component
   55                            | double_value_expAddSubtract '-' double_value_component
   56                            | double_value_component

   57 component: component '*' factor
   58          | component '/' factor
   59          | factor

   60 double_value_component: double_value_component '*' double_value_factor
   61                       | double_value_component '/' double_value_factor
   62                       | double_value_factor

   63 factor: '(' expbitwise ')'
   64       | '-' factor
   65       | '~' factor
   66       | term

   67 double_value_factor: '(' double_value_expAddSubtract ')'
   68                    | double_value_term
   69                    | '-' double_value_factor

   70 term: LONG_INTEGER
   71     | CHARACTER_VALUE
   72     | TrueFalse
   73     | IDENTIFIER_TOKEN

   74 double_value_term: DOUBE_FLOATING_POINT

   75 Bexp: exp '>' exp
   76     | exp GREATER_THAN_EQUAL exp
   77     | exp '<' exp
   78     | exp LESS_THAN_EQUAL exp
   79     | exp EQUAL_EQUAL exp
   80     | exp NOT_EQUAL exp
   81     | double_value_expAddSubtract '>' double_value_expAddSubtract
   82     | double_value_expAddSubtract GREATER_THAN_EQUAL double_value_expAddSubtract
   83     | double_value_expAddSubtract '<' double_value_expAddSubtract
   84     | double_value_expAddSubtract LESS_THAN_EQUAL double_value_expAddSubtract
   85     | double_value_expAddSubtract EQUAL_EQUAL double_value_expAddSubtract
   86     | double_value_expAddSubtract NOT_EQUAL double_value_expAddSubtract

   87 Bexp1: Bexp1 OR Bexpand
   88      | Bexpand

   89 Bexpand: Bexpand AND Bexpbracket
   90        | Bexpbracket

   91 Bexpbracket: '(' Bexp1 ')'
   92            | NOT Bexpbracket
   93            | Bexp


Terminals, with rules where they appear

$end (0) 0
'&' (38) 45
'(' (40) 34 36 37 38 41 42 43 63 67 91
')' (41) 34 36 37 38 41 42 43 63 67 91
'*' (42) 57 60
'+' (43) 52 54
'-' (45) 53 55 64 69
'/' (47) 58 61
':' (58) 36
'<' (60) 77 83
'=' (61) 29 30 31 32
'>' (62) 75 81
'^' (94) 46
'|' (124) 44
'~' (126) 65
error (256)
exit_command (258) 2 16
Rakam (259) 24
TOKEN_Hroof (260) 28
TOKEN_3ashry (261) 25
TOKEN_Harf (262) 27
TOKEN_Boolean (263) 26
CONSTANT_TOKEN (264) 23
TOKEN_Atba3 (265)
LONG_INTEGER (266) 70
DOUBE_FLOATING_POINT (267) 74
STRING_VALUE (268) 33
CHARACTER_VALUE (269) 71
TrueFalse (270) 72
SCOPE_START_TOKEN (271) 34 35 37 38 41 42
SCOPE_END_TOKEN (272) 34 35 37 38 41 42
STATEMENT_TERMINATOR_TOKEN (273) 1 2 3 4 5 16 17 18 19 20 41 43
IF_STATEMENT_TOKEN (274) 34
ELSE_STATEMENT_TOKEN (275) 35
SWITCH_CASE_BEGINNING_TOKEN (276) 36
SWITCH_CASE_START_CASES_TOKEN (277) 36
SWITCH_CASE_END_CASES_TOKEN (278) 36
SWITCH_DEFAULT_CASE_BEGINNING_TOKEN (279) 36
FOR_LOOP_STATMENT_TOKEN (280) 41
WHILE_LOOP_STATEMENT_TOKEN (281) 42 43
DO_STATEMENT_TOKEN (282) 43
IDENTIFIER_TOKEN (283) 21 29 30 31 32 36 73
OR (284) 87
AND (285) 89
NOT (286) 92
SHIFT_LEFT (287) 49
SHIFT_RIGHT (288) 50
GREATER_THAN_EQUAL (289) 76 82
LESS_THAN_EQUAL (290) 78 84
EQUAL_EQUAL (291) 79 85
NOT_EQUAL (292) 80 86


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
line (53)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    0 4 5 6 8 10 12 14 16 18 19 34 35 36 37 38 41 42 43
declaration (54)
    on left: 21 22 23, on right: 3 4 40
data_type (55)
    on left: 24 25 26 27 28, on right: 21 22 23
assignment (56)
    on left: 29 30 31 32, on right: 1 5 22 23 39 41
string_value_assignment (57)
    on left: 33, on right: 32
if_statement (58)
    on left: 34 35, on right: 8 9 35
switch_statement (59)
    on left: 36, on right: 10 11
case_statement (60)
    on left: 37 38, on right: 36 37
for_iterator (61)
    on left: 39 40, on right: 41
for_statement (62)
    on left: 41, on right: 6 7
while_statement (63)
    on left: 42, on right: 12 13
repeat_statement (64)
    on left: 43, on right: 14 15
expbitwise (65)
    on left: 44 45 46 47, on right: 18 29 44 45 46 63
exp (66)
    on left: 48 49 50, on right: 44 45 46 47 49 50 75 76 77 78 79 80
expAddSubtract (67)
    on left: 51 52 53, on right: 48 49 50 52 53
double_value_expAddSubtract (68)
    on left: 54 55 56, on right: 19 20 30 54 55 67 81 82 83 84 85 86
component (69)
    on left: 57 58 59, on right: 51 52 53 57 58
double_value_component (70)
    on left: 60 61 62, on right: 54 55 56 60 61
factor (71)
    on left: 63 64 65 66, on right: 57 58 59 64 65
double_value_factor (72)
    on left: 67 68 69, on right: 60 61 62 69
term (73)
    on left: 70 71 72 73, on right: 37 38 66
double_value_term (74)
    on left: 74, on right: 68
Bexp (75)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86, on right: 34 93
Bexp1 (76)
    on left: 87 88, on right: 31 41 42 43 87 91
Bexpand (77)
    on left: 89 90, on right: 87 88 89
Bexpbracket (78)
    on left: 91 92 93, on right: 89 90 92


state 0

    0 $accept: . line $end

    exit_command                 shift, and go to state 1
    Rakam                        shift, and go to state 2
    TOKEN_Hroof                  shift, and go to state 3
    TOKEN_3ashry                 shift, and go to state 4
    TOKEN_Harf                   shift, and go to state 5
    TOKEN_Boolean                shift, and go to state 6
    CONSTANT_TOKEN               shift, and go to state 7
    DOUBE_FLOATING_POINT         shift, and go to state 8
    STATEMENT_TERMINATOR_TOKEN   shift, and go to state 9
    IF_STATEMENT_TOKEN           shift, and go to state 10
    SWITCH_CASE_BEGINNING_TOKEN  shift, and go to state 11
    FOR_LOOP_STATMENT_TOKEN      shift, and go to state 12
    WHILE_LOOP_STATEMENT_TOKEN   shift, and go to state 13
    DO_STATEMENT_TOKEN           shift, and go to state 14
    IDENTIFIER_TOKEN             shift, and go to state 15
    '('                          shift, and go to state 16
    '-'                          shift, and go to state 17

    line                         go to state 18
    declaration                  go to state 19
    data_type                    go to state 20
    assignment                   go to state 21
    if_statement                 go to state 22
    switch_statement             go to state 23
    for_statement                go to state 24
    while_statement              go to state 25
    repeat_statement             go to state 26
    double_value_expAddSubtract  go to state 27
    double_value_component       go to state 28
    double_value_factor          go to state 29
    double_value_term            go to state 30


state 1

    2 line: exit_command . STATEMENT_TERMINATOR_TOKEN

    STATEMENT_TERMINATOR_TOKEN  shift, and go to state 31


state 2

   24 data_type: Rakam .

    $default  reduce using rule 24 (data_type)


state 3

   28 data_type: TOKEN_Hroof .

    $default  reduce using rule 28 (data_type)


state 4

   25 data_type: TOKEN_3ashry .

    $default  reduce using rule 25 (data_type)


state 5

   27 data_type: TOKEN_Harf .

    $default  reduce using rule 27 (data_type)


state 6

   26 data_type: TOKEN_Boolean .

    $default  reduce using rule 26 (data_type)


state 7

   23 declaration: CONSTANT_TOKEN . data_type assignment

    Rakam          shift, and go to state 2
    TOKEN_Hroof    shift, and go to state 3
    TOKEN_3ashry   shift, and go to state 4
    TOKEN_Harf     shift, and go to state 5
    TOKEN_Boolean  shift, and go to state 6

    data_type  go to state 32


state 8

   74 double_value_term: DOUBE_FLOATING_POINT .

    $default  reduce using rule 74 (double_value_term)


state 9

   17 line: STATEMENT_TERMINATOR_TOKEN .

    $default  reduce using rule 17 (line)


state 10

   34 if_statement: IF_STATEMENT_TOKEN . '(' Bexp ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

    '('  shift, and go to state 33


state 11

   36 switch_statement: SWITCH_CASE_BEGINNING_TOKEN . '(' IDENTIFIER_TOKEN ')' SWITCH_CASE_START_CASES_TOKEN ':' case_statement SWITCH_DEFAULT_CASE_BEGINNING_TOKEN line SWITCH_CASE_END_CASES_TOKEN

    '('  shift, and go to state 34


state 12

   41 for_statement: FOR_LOOP_STATMENT_TOKEN . '(' for_iterator STATEMENT_TERMINATOR_TOKEN Bexp1 STATEMENT_TERMINATOR_TOKEN assignment ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

    '('  shift, and go to state 35


state 13

   42 while_statement: WHILE_LOOP_STATEMENT_TOKEN . '(' Bexp1 ')' SCOPE_START_TOKEN line SCOPE_END_TOKEN

    '('  shift, and go to state 36


state 14

   43 repeat_statement: DO_STATEMENT_TOKEN . line WHILE_LOOP_STATEMENT_TOKEN '(' Bexp1 ')' STATEMENT_TERMINATOR_TOKEN

    exit_command                 shift, and go to state 1
    Rakam                        shift, and go to state 2
    TOKEN_Hroof                  shift, and go to state 3
    TOKEN_3ashry                 shift, and go to state 4
    TOKEN_Harf                   shift, and go to state 5
    TOKEN_Boolean                shift, and go to state 6
    CONSTANT_TOKEN               shift, and go to state 7
    DOUBE_FLOATING_POINT         shift, and go to state 8
    STATEMENT_TERMINATOR_TOKEN   shift, and go to state 9
    IF_STATEMENT_TOKEN           shift, and go to state 10
    SWITCH_CASE_BEGINNING_TOKEN  shift, and go to state 11
    FOR_LOOP_STATMENT_TOKEN      shift, and go to state 12
    WHILE_LOOP_STATEMENT_TOKEN   shift, and go to state 13
    DO_STATEMENT_TOKEN           shift, and go to state 14
    IDENTIFIER_TOKEN             shift, and go to state 15
    '('                          shift, and go to state 16
    '-'                          shift, and go to state 17

    line                         go to state 37
    declaration                  go to state 19
    data_type                    go to state 20
    assignment                   go to state 21
    if_statement                 go to state 22
    switch_statement             go to state 23
    for_statement                go to state 24
    while_statement              go to state 25
    repeat_statement             go to state 26
    double_value_expAddSubtract  go to state 27
    double_value_component       go to state 28
    double_value_factor          go to state 29
    double_value_term            go to state 30


state 15

   29 assignment: IDENTIFIER_TOKEN . '=' expbitwise
   30           | IDENTIFIER_TOKEN . '=' double_value_expAddSubtract
   31           | IDENTIFIER_TOKEN . '=' Bexp1
   32           | IDENTIFIER_TOKEN . '=' string_value_assignment

    '='  shift, and go to state 38


state 16

   67 double_value_factor: '(' . double_value_expAddSubtract ')'

    DOUBE_FLOATING_POINT  shift, and go to state 8
    '('                   shift, and go to state 16
    '-'                   shift, and go to state 17

    double_value_expAddSubtract  go to state 39
    double_value_component       go to state 28
    double_value_factor          go to state 29
    double_value_term            go to state 30


state 17

   69 double_value_factor: '-' . double_value_factor

    DOUBE_FLOATING_POINT  shift, and go to state 8
    '('                   shift, and go to state 16
    '-'                   shift, and go to state 17

    double_value_factor  go to state 40
    double_value_term    go to state 30


state 18

    0 $accept: line . $end
    4 line: line . declaration STATEMENT_TERMINATOR_TOKEN
    5     | line . assignment STATEMENT_TERMINATOR_TOKEN
    6     | line . for_statement
    8     | line . if_statement
   10     | line . switch_statement
   12     | line . while_statement
   14     | line . repeat_statement
   16     | line . exit_command STATEMENT_TERMINATOR_TOKEN
   18     | line . expbitwise STATEMENT_TERMINATOR_TOKEN
   19     | line . double_value_expAddSubtract STATEMENT_TERMINATOR_TOKEN

    $end                         shift, and go to state 41
    exit_command                 shift, and go to state 42
    Rakam                        shift, and go to state 2
    TOKEN_Hroof                  shift, and go to state 3
    TOKEN_3ashry                 shift, and go to state 4
    TOKEN_Harf                   shift, and go to state 5
    TOKEN_Boolean                shift, and go to state 6
    CONSTANT_TOKEN               shift, and go to state 7
    LONG_INTEGER                 shift, and go to state 43
    DOUBE_FLOATING_POINT         shift, and go to state 8
    CHARACTER_VALUE              shift, and go to state 44
    TrueFalse                    shift, and go to state 45
    IF_STATEMENT_TOKEN           shift, and go to state 10
    SWITCH_CASE_BEGINNING_TOKEN  shift, and go to state 11
    FOR_LOOP_STATMENT_TOKEN      shift, and go to state 12
    WHILE_LOOP_STATEMENT_TOKEN   shift, and go to state 13
    DO_STATEMENT_TOKEN           shift, and go to state 14
    IDENTIFIER_TOKEN             shift, and go to state 46
    '('                          shift, and go to state 47
    '-'                          shift, and go to state 48
    '~'                          shift, and go to state 49

    declaration                  go to state 50
    data_type                    go to state 20
    assignment                   go to state 51
    if_statement                 go to state 52
    switch_statement             go to state 53
    for_statement                go to state 54
    while_statement              go to state 55
    repeat_statement             go to state 56
    expbitwise                   go to state 57
    exp                          go to state 58
    expAddSubtract               go to state 59
    double_value_expAddSubtract  go to state 60
    component                    go to state 61
    double_value_component       go to state 28
    factor                       go to state 62
    double_value_factor          go to state 29
    term                         go to state 63
    double_value_term            go to state 30


state 19

    3 line: declaration . STATEMENT_TERMINATOR_TOKEN

    STATEMENT_TERMINATOR_TOKEN  shift, and go to state 64


state 20

   21 declaration: data_type . IDENTIFIER_TOKEN
   22            | data_type . assignment

    IDENTIFIER_TOKEN  shift, and go to state 65

    assignment  go to state 66


state 21

    1 line: assignment . STATEMENT_TERMINATOR_TOKEN

    STATEMENT_TERMINATOR_TOKEN  shift, and go to state 67


state 22

    9 line: if_statement .
   35 if_statement: if_statement . ELSE_STATEMENT_TOKEN SCOPE_START_TOKEN line SCOPE_END_TOKEN

    ELSE_STATEMENT_TOKEN  shift, and go to state 68

    $default  reduce using rule 9 (line)


state 23

   11 line: switch_statement .
